Add route for /model/sha

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -37,13 +37,14 @@ server {
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # The shas service is a simple one-page service that shows
   # all the services' git-commit shas used to create their currently
-  # running image. A generically routed service (eg custom-chooser)
+  # running image. A generically routed service (eg chooser)
   # does not need an explicit route here.
 
   location /avatars/sha {
     rewrite ^/avatars/sha /sha break;
     proxy_pass http://avatars:5027;
   }
+
   location /custom-start-points/sha {
     rewrite ^/custom-start-points/sha /sha break;
     proxy_pass http://custom-start-points:4526;
@@ -56,25 +57,30 @@ server {
     rewrite ^/languages-start-points/sha /sha break;
     proxy_pass http://languages-start-points:4524;
   }
+
   location /differ/sha {
     rewrite ^/differ/sha /sha break;
     proxy_pass http://differ:4567;
   }
-  location /runner/sha {
-    rewrite ^/runner/sha /sha break;
-    proxy_pass http://runner:4597;
+  location /model/sha {
+    rewrite ^/model/sha /sha break;
+    proxy_pass http://model:4528;
   }
   location /puller/sha {
     rewrite ^/puller/sha /sha break;
     proxy_pass http://puller:5017;
   }
-  location /saver/sha {
-    rewrite ^/saver/sha /sha break;
-    proxy_pass http://saver:4537;
-  }
   location /repler/sha                 {
     rewrite ^/repler/sha /sha break;
     proxy_pass http://repler:4657;
+  }
+  location /runner/sha {
+    rewrite ^/runner/sha /sha break;
+    proxy_pass http://runner:4597;
+  }
+  location /saver/sha {
+    rewrite ^/saver/sha /sha break;
+    proxy_pass http://saver:4537;
   }
   location /shas {
     rewrite ^/shas/(.*) /$1 break;
