--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -62,10 +62,10 @@ server {
     rewrite ^/differ/sha /sha break;
     proxy_pass http://differ:4567;
   }
-  #location /model/sha {
-  #  rewrite ^/model/sha /sha break;
-  #  proxy_pass http://model:4528;
-  #}
+  location /model/sha {
+    rewrite ^/model/sha /sha break;
+    proxy_pass http://model:4528;
+  }
   location /repler/sha                 {
     rewrite ^/repler/sha /sha break;
     proxy_pass http://repler:4657;
