Simplify avatar/ routes

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -26,11 +26,14 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # The avatar service is abstraction of 64 entrants in a group-exercise
-  # each indexed entrant (eg /avatar/image/3) is an image.
 
-  location /avatar/image/ {
-    rewrite ^/avatar/image/(.*) /image/$1 break;
+  location /avatars/ {
+    rewrite ^/avatars/(.*) /$1 break;
+    proxy_pass http://avatars:5027;
+  }
+
+  location /avatar/ {
+    rewrite ^/avatar/(.*) /$1 break;
     proxy_pass http://avatars:5027;
   }
 
@@ -39,11 +42,6 @@ server {
   # all the services' git-commit shas used to create their currently
   # running image. A generically routed service (eg chooser)
   # does not need an explicit route here.
-
-  location /avatars/sha {
-    rewrite ^/avatars/sha /sha break;
-    proxy_pass http://avatars:5027;
-  }
 
   location /custom-start-points/sha {
     rewrite ^/custom-start-points/sha /sha break;
