Remove /avatar route in favour of /avatars

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -26,21 +26,35 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Pages to create an exercise
+
+  location /creator/ {
+    rewrite ^/creator/(.*) /$1 break;
+    proxy_pass http://creator:4523;
+  }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # avatars names and images (jpg)
 
   location /avatars/ {
     rewrite ^/avatars/(.*) /$1 break;
     proxy_pass http://avatars:5027;
   }
 
-  location /avatar/ {
-    rewrite ^/avatar/(.*) /$1 break;
-    proxy_pass http://avatars:5027;
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Read-Eval-Print-Loop service (uses web-sockets)
+
+  location /repler/ {
+    proxy_pass http://repler:4657/repl/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # The shas service is a simple one-page service that shows
   # all the services' git-commit shas used to create their currently
-  # running image. A generically routed service (eg chooser)
+  # running image. A generically routed service (eg avatars)
   # does not need an explicit route here.
 
   location /custom-start-points/sha {
@@ -79,24 +93,6 @@ server {
   location /shas {
     rewrite ^/shas/(.*) /$1 break;
     proxy_pass http://shas:4522;
-  }
-
-  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # Pages to create up an exercise
-
-  location /creator/ {
-    rewrite ^/creator/(.*) /$1 break;
-    proxy_pass http://creator:4523;
-  }
-
-  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # Read-Eval-Print-Loop service (uses web-sockets)
-
-  location /repler/ {
-    proxy_pass http://repler:4657/repl/;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
