Add rewrite route for new home page.

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -14,6 +14,11 @@ server {
   client_max_body_size 1G;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Home page
+  
+  rewrite ^/dojo/index(.*) /creator/home permanent;
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Deprecated routes
 
   location /setup_custom_start_point/save_group_json {
@@ -96,7 +101,7 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # For everything else try web.
+  # For everything else try a static file, otherwise try web.
 
   location /  {
     # An HTTP header important enough to have its own Wikipedia entry:
