Add empty page / redirect to new home page

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -15,7 +15,8 @@ server {
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Home page
-  
+
+  rewrite ^/$              /creator/home permanent;
   rewrite ^/dojo/index(.*) /creator/home permanent;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -59,7 +60,7 @@ server {
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # The shas service is a simple one-page service that shows
   # all the services' git-commit shas used to create their currently
-  # running image. A generically routed service (eg avatars)
+  # running image. A generically routed service (eg avatars/creator)
   # does not need an explicit route here.
 
   location /custom-start-points/sha {
