Turn off home page redirect

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -16,7 +16,7 @@ server {
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Home page
 
-  rewrite ^/$              /creator/home permanent;
+  #rewrite ^/$              /creator/home permanent;
   rewrite ^/dojo/index(.*) /creator/home permanent;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
