Add route for /favicon.ico

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -14,6 +14,13 @@ server {
   client_max_body_size 1G;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Pesky favicon.ico
+
+  location = /favicon.ico {
+    root /usr/share/nginx/html/images;
+  }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Home page
 
   #rewrite ^/$              /creator/home permanent;
