--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -14,16 +14,22 @@ server {
   client_max_body_size 1G;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # Pesky favicon.ico
+  # favicon.ico is in images/ dir for tidyness.
 
   location = /favicon.ico {
     root /usr/share/nginx/html/images;
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # Home page
+  # Old route redirects...
 
-  rewrite ^/dojo/index(.*) /creator/home permanent;
+  rewrite ^/dojo/index(.*)       /creator/home        permanent;
+  rewrite ^/individual/show/(.*) /creator/enter?id=$1 permanent;
+  rewrite ^/group/show/(.*)      /creator/enter?id=$1 permanent;
+  rewrite ^/kata/group/(.*)      /creator/enter?id=$1 permanent;
+  rewrite ^/id_join/show/(.*)    /creator/enter?id=$1 permanent;
+  rewrite ^/id_rejoin/show/(.*)  /creator/enter?id=$1 permanent;
+  rewrite ^/id_review/show/(.*)  /creator/enter?id=$1 permanent;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Deprecated routes
