Turn off retiring route redirects (too brutal)

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -24,12 +24,12 @@ server {
   # Old route redirects...
 
   rewrite ^/dojo/index(.*)       /creator/home        permanent;
-  rewrite ^/individual/show/(.*) /creator/enter?id=$1 permanent;
-  rewrite ^/group/show/(.*)      /creator/enter?id=$1 permanent;
-  rewrite ^/kata/group/(.*)      /creator/enter?id=$1 permanent;
-  rewrite ^/id_join/show/(.*)    /creator/enter?id=$1 permanent;
-  rewrite ^/id_rejoin/show/(.*)  /creator/enter?id=$1 permanent;
-  rewrite ^/id_review/show/(.*)  /creator/enter?id=$1 permanent;
+  #rewrite ^/individual/show/(.*) /creator/enter?id=$1 permanent;
+  #rewrite ^/group/show/(.*)      /creator/enter?id=$1 permanent;
+  #rewrite ^/kata/group/(.*)      /creator/enter?id=$1 permanent;
+  #rewrite ^/id_join/show/(.*)    /creator/enter?id=$1 permanent;
+  #rewrite ^/id_rejoin/show/(.*)  /creator/enter?id=$1 permanent;
+  #rewrite ^/id_review/show/(.*)  /creator/enter?id=$1 permanent;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Deprecated routes
