--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -16,14 +16,14 @@ server {
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # favicon.ico is in images/ dir for tidyness.
 
-  location = /favicon.ico {
-    root /usr/share/nginx/html/images;
-  }
+  #location = /favicon.ico {
+  #  root /usr/share/nginx/html/images;
+  #}
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Old route redirects...
 
-  rewrite ^/dojo/index(.*)       /creator/home        permanent;
+  #rewrite ^/dojo/index(.*)       /creator/home        permanent;
   #rewrite ^/individual/show/(.*) /creator/enter?id=$1 permanent;
   #rewrite ^/group/show/(.*)      /creator/enter?id=$1 permanent;
   #rewrite ^/kata/group/(.*)      /creator/enter?id=$1 permanent;
