Add back rewrite path for /dojo/index to see if it is the cause of the 502

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -23,7 +23,7 @@ server {
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Old route redirects...
 
-  #rewrite ^/dojo/index(.*)       /creator/home        permanent;
+  rewrite ^/dojo/index(.*)       /creator/home        permanent;
   #rewrite ^/individual/show/(.*) /creator/enter?id=$1 permanent;
   #rewrite ^/group/show/(.*)      /creator/enter?id=$1 permanent;
   #rewrite ^/kata/group/(.*)      /creator/enter?id=$1 permanent;
