Add back rule for /favicon.ico to see if it the cause of the 502's

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -16,9 +16,9 @@ server {
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # favicon.ico is in images/ dir for tidyness.
 
-  #location = /favicon.ico {
-  #  root /usr/share/nginx/html/images;
-  #}
+  location = /favicon.ico {
+    root /usr/share/nginx/html/images;
+  }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Old route redirects...
