Add redirects for retiring /creator routes

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -31,6 +31,14 @@ server {
   rewrite ^/id_rejoin/show/?(.*)  /creator/enter?id=$1 permanent;
   rewrite ^/id_review/show/?(.*)  /creator/enter?id=$1 permanent;
 
+  rewrite ^/creator/group_custom_choose   /creator/choose_custom_problem?type=group  permanent;
+  rewrite ^/creator/group_exercise_choose /creator/choose_problem?type=group         permanent;
+  rewrite ^/creator/group_language_choose /creator/choose_problem?type=group         permanent;
+
+  rewrite ^/creator/kata_custom_choose    /creator/choose_custom_problem?type=single permanent;
+  rewrite ^/creator/kata_exercise_choose  /creator/choose_problem?type=single        permanent;
+  rewrite ^/creator/kata_language_choose  /creator/choose_problem?type=single        permanent;
+
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Deprecated routes
 
