--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -32,12 +32,22 @@ server {
   rewrite ^/id_review/show/?(.*)  /creator/enter?id=$1 permanent;
 
   rewrite ^/creator/group_custom_choose   /creator/choose_custom_problem?type=group?  permanent;
-  rewrite ^/creator/group_exercise_choose /creator/choose_problem?type=group?         permanent;
-  rewrite ^/creator/group_language_choose /creator/choose_problem?type=group?         permanent;
-
   rewrite ^/creator/kata_custom_choose    /creator/choose_custom_problem?type=single? permanent;
+
+  rewrite ^/creator/group_exercise_choose /creator/choose_problem?type=group?         permanent;
   rewrite ^/creator/kata_exercise_choose  /creator/choose_problem?type=single?        permanent;
-  rewrite ^/creator/kata_language_choose  /creator/choose_problem?type=single?        permanent;
+
+  location /creator/group_language_choose {
+    set $args '';
+    rewrite ^/creator/group_language_choose /creator/choose_problem?type=group        permanent;
+  }
+  location /creator/kata_language_choose {
+    set $args '';
+    rewrite ^/creator/kata_language_choose /creator/choose_problem?type=single        permanent;
+  }
+
+  #rewrite ^/creator/group_language_choose /creator/choose_problem?type=group?         permanent;
+  #rewrite ^/creator/kata_language_choose  /creator/choose_problem?type=single?        permanent;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Deprecated routes
