Drop parameters on redirects for retiring /creator paths (4th attempt)

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -37,17 +37,12 @@ server {
   rewrite ^/creator/group_exercise_choose /creator/choose_problem?type=group?         permanent;
   rewrite ^/creator/kata_exercise_choose  /creator/choose_problem?type=single?        permanent;
 
-  location /creator/group_language_choose {
-    set $args '';
-    rewrite ^/creator/group_language_choose /creator/choose_problem?type=group        permanent;
+  location ^~ /creator/group_language_choose {
+    rewrite ^/creator/group_language_choose$ /creator/choose_problem?type=group?      permanent;
   }
-  location /creator/kata_language_choose {
-    set $args '';
-    rewrite ^/creator/kata_language_choose /creator/choose_problem?type=single        permanent;
+  location ^~ /creator/kata_language_choose {
+    rewrite ^/creator/kata_language_choose$  /creator/choose_problem?type=single?     permanent;
   }
-
-  #rewrite ^/creator/group_language_choose /creator/choose_problem?type=group?         permanent;
-  #rewrite ^/creator/kata_language_choose  /creator/choose_problem?type=single?        permanent;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Deprecated routes
