--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -24,25 +24,23 @@ server {
   # Old route redirects...
 
   rewrite ^/dojo/index(.*)        /creator/home        permanent;
+
   rewrite ^/individual/show/?(.*) /creator/enter?id=$1 permanent;
   rewrite ^/group/show/?(.*)      /creator/enter?id=$1 permanent;
   rewrite ^/kata/group/?(.*)      /creator/enter?id=$1 permanent;
+  
   rewrite ^/id_join/show/?(.*)    /creator/enter?id=$1 permanent;
   rewrite ^/id_rejoin/show/?(.*)  /creator/enter?id=$1 permanent;
   rewrite ^/id_review/show/?(.*)  /creator/enter?id=$1 permanent;
 
-  rewrite ^/creator/group_custom_choose   /creator/choose_custom_problem?type=group?  permanent;
-  rewrite ^/creator/kata_custom_choose    /creator/choose_custom_problem?type=single? permanent;
+  rewrite ^/creator/group_custom_choose    /creator/choose_custom_problem?type=group  permanent;
+  rewrite ^/creator/kata_custom_choose     /creator/choose_custom_problem?type=single permanent;
 
-  rewrite ^/creator/group_exercise_choose /creator/choose_problem?type=group?         permanent;
-  rewrite ^/creator/kata_exercise_choose  /creator/choose_problem?type=single?        permanent;
+  rewrite ^/creator/group_exercise_choose  /creator/choose_problem?type=group         permanent;
+  rewrite ^/creator/kata_exercise_choose   /creator/choose_problem?type=single        permanent;
 
-  location ^~ /creator/group_language_choose {
-    rewrite ^/creator/group_language_choose$ /creator/choose_problem?type=group?      permanent;
-  }
-  location ^~ /creator/kata_language_choose {
-    rewrite ^/creator/kata_language_choose$  /creator/choose_problem?type=single?     permanent;
-  }
+  rewrite ^/creator/group_language_choose$ /creator/choose_ltf?type=group             permanent;
+  rewrite ^/creator/kata_language_choose$  /creator/choose_ltf?type=single            permanent;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Deprecated routes
