Retain parameters on redirect for retiring /creator/...language_choose?... paths (2nd attempt)

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -28,7 +28,7 @@ server {
   rewrite ^/individual/show/?(.*) /creator/enter?id=$1 permanent;
   rewrite ^/group/show/?(.*)      /creator/enter?id=$1 permanent;
   rewrite ^/kata/group/?(.*)      /creator/enter?id=$1 permanent;
-  
+
   rewrite ^/id_join/show/?(.*)    /creator/enter?id=$1 permanent;
   rewrite ^/id_rejoin/show/?(.*)  /creator/enter?id=$1 permanent;
   rewrite ^/id_review/show/?(.*)  /creator/enter?id=$1 permanent;
@@ -39,8 +39,8 @@ server {
   rewrite ^/creator/group_exercise_choose  /creator/choose_problem?type=group         permanent;
   rewrite ^/creator/kata_exercise_choose   /creator/choose_problem?type=single        permanent;
 
-  rewrite ^/creator/group_language_choose$ /creator/choose_ltf?type=group             permanent;
-  rewrite ^/creator/kata_language_choose$  /creator/choose_ltf?type=single            permanent;
+  rewrite ^/creator/group_language_choose  /creator/choose_ltf?type=group             permanent;
+  rewrite ^/creator/kata_language_choose   /creator/choose_ltf?type=single            permanent;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Deprecated routes
