Add redirect for / route

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -14,16 +14,13 @@ server {
   client_max_body_size 1G;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # favicon.ico is in images/ dir for tidyness.
+  # Home page redirects...
 
-  location = /favicon.ico {
-    root /usr/share/nginx/html/images;
-  }
+  rewrite ^/$              /creator/home permanent;
+  rewrite ^/dojo/index(.*) /creator/home permanent;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Old route redirects...
-
-  rewrite ^/dojo/index(.*)        /creator/home        permanent;
 
   rewrite ^/individual/show/?(.*) /creator/enter?id=$1 permanent;
   rewrite ^/group/show/?(.*)      /creator/enter?id=$1 permanent;
@@ -52,6 +49,13 @@ server {
   location /setup_custom_start_point/save_individual_json {
     rewrite ^/setup_custom_start_point/save_individual_json /deprecated_kata_create_custom  break;
     proxy_pass http://creator:4523;
+  }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # favicon.ico is in images/ dir for tidyness.
+
+  location = /favicon.ico {
+    root /usr/share/nginx/html/images;
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
