Delete avatars service entries from nginx.conf

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -67,14 +67,6 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # avatars names and images (jpg)
-
-  location /avatars/ {
-    rewrite ^/avatars/(.*) /$1 break;
-    proxy_pass http://avatars:5027;
-  }
-
-  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Read-Eval-Print-Loop service (uses web-sockets)
 
   location /repler/ {
@@ -87,8 +79,7 @@ server {
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # The shas service is a simple one-page service that shows
   # all the services' git-commit shas used to create their currently
-  # running image. A generically routed service (eg avatars/creator)
-  # does not need an explicit route here.
+  # running image.
 
   location /custom-start-points/sha {
     rewrite ^/custom-start-points/sha /sha break;
