Added forthcoming differ/diff_summary.json route

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -59,11 +59,19 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # Pages to create an exercise
+  # Paths to create/enter an exercise
 
   location /creator/ {
     rewrite ^/creator/(.*) /$1 break;
     proxy_pass http://creator:4523;
+  }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Paths related to diffs
+
+  location /differ/diff_summary.json {
+    rewrite ^/differ/sha /diff_summary.json break;
+    proxy_pass http://differ:4567;
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
