--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -69,8 +69,8 @@ server {
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Paths related to diffs
 
-  location /differ/diff_summary.json {
-    rewrite ^/differ/sha /diff_summary.json break;
+  location /differ/diff_summary {
+    rewrite ^/differ/diff_summary /diff_summary break;
     proxy_pass http://differ:4567;
   }
 
