Added proxy-pass redirect for /forker/fork_... paths which are now handled by creator service

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -21,6 +21,8 @@ server {
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Old route redirects...
+  # GET requests can use a rewrite. POST requests need a proxy-redirect
+  # because a rewrite on a POST turns it into a GET.
 
   rewrite ^/individual/show/?(.*) /creator/enter?id=$1 permanent;
   rewrite ^/group/show/?(.*)      /creator/enter?id=$1 permanent;
@@ -38,6 +40,16 @@ server {
 
   rewrite ^/creator/group_language_choose  /creator/choose_ltf?type=group             permanent;
   rewrite ^/creator/kata_language_choose   /creator/choose_ltf?type=single            permanent;
+
+  location /forker/fork_individual {
+    rewrite ^/forker/fork_individual       /fork_individual break;
+    proxy_pass http://creator:4523;
+  }
+
+  location /forker/fork_group {
+    rewrite ^/forker/fork_group            /fork_group break;
+    proxy_pass http://creator:4523;
+  }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Deprecated routes
@@ -59,7 +71,7 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # Paths to create/enter an exercise
+  # Paths to create/enter/fork an exercise
 
   location /creator/ {
     rewrite ^/creator/(.*) /$1 break;
