Added rewrite for /assets/favicon.ico

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -69,6 +69,7 @@ server {
   location = /favicon.ico {
     root /usr/share/nginx/html/images;
   }
+  rewrite ^/assets/favicon-(.*).ico /usr/share/nginx/html/images/favicon.ico permanent;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Paths to create/enter/fork an exercise
