Added route for differ.diff_lines2()

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -87,6 +87,11 @@ server {
     proxy_pass http://differ:4567;
   }
 
+  location /differ/diff_lines2 {
+    rewrite ^/differ/diff_lines2 /diff_lines2 break;
+    proxy_pass http://differ:4567;
+  }
+
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # The shas service is a simple one-page service that shows
   # all the services' git-commit shas used to create their currently
