Added path for model/kata_event

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -80,7 +80,15 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # Paths related to diffs
+  # Model paths
+
+  location /model/kata_event {
+    rewrite ^/model/kata_event /kata_event break;
+    proxy_pass http://model:4528;
+  }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Differ paths
 
   location /differ/diff_summary {
     rewrite ^/differ/diff_summary /diff_summary break;
