--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -95,6 +95,11 @@ server {
     proxy_pass http://differ:4567;
   }
 
+  location /differ/diff_lines {
+    rewrite ^/differ/diff_lines /diff_lines break;
+    proxy_pass http://differ:4567;
+  }
+
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # The shas service is a simple one-page service that shows
   # all the services' git-commit shas used to create their currently
