Added route for model/kata_events

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -87,6 +87,11 @@ server {
     proxy_pass http://model:4528;
   }
 
+  location /model/kata_events {
+    rewrite ^/model/kata_events /kata_events break;
+    proxy_pass http://model:4528;
+  }
+
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Differ paths
 
