Added route for model.group_joined()

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -21,7 +21,7 @@ server {
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Old route redirects...
-  # GET requests can use a rewrite. POST requests need a proxy-redirect
+  # GET requests can use a rewrite. POST requests need a proxy-pass-redirect
   # because a rewrite on a POST turns it into a GET.
 
   rewrite ^/individual/show/?(.*) /creator/enter?id=$1 permanent;
@@ -89,6 +89,11 @@ server {
 
   location /model/kata_events {
     rewrite ^/model/kata_events /kata_events break;
+    proxy_pass http://model:4528;
+  }
+
+  location /model/group_joined {
+    rewrite ^/model/group_joined /group_joined break;
     proxy_pass http://model:4528;
   }
 
