Added route for dashboard/sha

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -128,6 +128,10 @@ server {
     proxy_pass http://languages-start-points:4524;
   }
 
+  location /dashboard/sha {
+    rewrite ^/dasboard/sha /sha break;
+    proxy_pass http://dashboard:4527;
+  }
   location /differ/sha {
     rewrite ^/differ/sha /sha break;
     proxy_pass http://differ:4567;
