Fixed typo in dashboard/sha route

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -129,7 +129,7 @@ server {
   }
 
   location /dashboard/sha {
-    rewrite ^/dasboard/sha /sha break;
+    rewrite ^/dashboard/sha /sha break;
     proxy_pass http://dashboard:4527;
   }
   location /differ/sha {
