Turn on routes for dashboard

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -98,6 +98,14 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Dashboard paths
+
+  location /dashboard/ {
+    rewrite ^/dashboard/(.*) /$1 break;
+    proxy_pass http://dashboard:4527;
+  }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Differ paths
 
   location /differ/diff_summary {
@@ -128,10 +136,6 @@ server {
     proxy_pass http://languages-start-points:4524;
   }
 
-  location /dashboard/sha {
-    rewrite ^/dashboard/sha /sha break;
-    proxy_pass http://dashboard:4527;
-  }
   location /differ/sha {
     rewrite ^/differ/sha /sha break;
     proxy_pass http://differ:4567;
