Added route for model/group_manifest

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -82,6 +82,16 @@ server {
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Model paths
 
+  location /model/group_manifest {
+    rewrite ^/model/group_manifest /group_manifest break;
+    proxy_pass http://model:4528;
+  }
+
+  location /model/group_joined {
+    rewrite ^/model/group_joined /group_joined break;
+    proxy_pass http://model:4528;
+  }
+
   location /model/kata_event {
     rewrite ^/model/kata_event /kata_event break;
     proxy_pass http://model:4528;
@@ -89,11 +99,6 @@ server {
 
   location /model/kata_events {
     rewrite ^/model/kata_events /kata_events break;
-    proxy_pass http://model:4528;
-  }
-
-  location /model/group_joined {
-    rewrite ^/model/group_joined /group_joined break;
     proxy_pass http://model:4528;
   }
 
