Added missing route for repler.

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -64,6 +64,16 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Read-Eval-Print-Loop service (uses web-sockets)
+
+  location /repler/ {
+    proxy_pass http://repler:4657/repl/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+  }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # favicon.ico is in images/ dir for tidyness.
 
   location = /favicon.ico {
