Added routes for kata_option_set and kata_option_get.

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -112,6 +112,16 @@ server {
     proxy_pass http://model:4528;
   }
 
+  location /model/kata_option_get {
+    rewrite ^/model/kata_option_get /kata_option_get break;
+    proxy_pass http://model:4528;
+  }
+
+  location /model/kata_option_set {
+    rewrite ^/model/kata_option_set /kata_option_set break;
+    proxy_pass http://model:4528;
+  }
+
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Dashboard paths
 
