Get port env-var names and values from file.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -14,5 +14,6 @@ RUN echo ${SHA} > ${NGINX_DIR}/sha.txt
 
 COPY custom-port-env-subst.sh /docker-entrypoint.d
 COPY nginx.conf.template      /docker-entrypoint.d
+COPY ports.env                /docker-entrypoint.d
 
 COPY gzip.conf                /etc/nginx/conf.d/gzip.conf
