--- a/app/nginx.conf.template
+++ b/app/nginx.conf.template
@@ -1,3 +1,5 @@
+# This file becomes /etc/nginx/conf.d/default.conf
+# See custom-port-env-subst.sh 
 
 map $http_upgrade $connection_upgrade {
   default upgrade;
@@ -5,7 +7,7 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-  listen 80;
+  listen ${CYBER_DOJO_NGINX_PORT};
   server_name localhost;
 
   # Path for static files
@@ -43,12 +45,12 @@ server {
 
   location /forker/fork_individual {
     rewrite ^/forker/fork_individual       /fork_individual break;
-    proxy_pass http://creator:4523;
+    proxy_pass http://creator:${CYBER_DOJO_CREATOR_PORT};
   }
 
   location /forker/fork_group {
     rewrite ^/forker/fork_group            /fork_group break;
-    proxy_pass http://creator:4523;
+    proxy_pass http://creator:${CYBER_DOJO_CREATOR_PORT};
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -56,18 +58,18 @@ server {
 
   location /setup_custom_start_point/save_group_json {
     rewrite ^/setup_custom_start_point/save_group_json /deprecated_group_create_custom break;
-    proxy_pass http://creator:4523;
+    proxy_pass http://creator:${CYBER_DOJO_CREATOR_PORT};
   }
   location /setup_custom_start_point/save_individual_json {
     rewrite ^/setup_custom_start_point/save_individual_json /deprecated_kata_create_custom  break;
-    proxy_pass http://creator:4523;
+    proxy_pass http://creator:${CYBER_DOJO_CREATOR_PORT};
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Read-Eval-Print-Loop service (uses web-sockets)
 
   location /repler/ {
-    proxy_pass http://repler:4657/repl/;
+    proxy_pass http://repler:${CYBER_DOJO_REPLER_PORT}/repl/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
@@ -86,7 +88,7 @@ server {
 
   location /creator/ {
     rewrite ^/creator/(.*) /$1 break;
-    proxy_pass http://creator:4523;
+    proxy_pass http://creator:${CYBER_DOJO_CREATOR_PORT};
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -94,32 +96,32 @@ server {
 
   location /model/group_manifest {
     rewrite ^/model/group_manifest /group_manifest break;
-    proxy_pass http://model:4528;
+    proxy_pass http://model:${CYBER_DOJO_MODEL_PORT};
   }
 
   location /model/group_joined {
     rewrite ^/model/group_joined /group_joined break;
-    proxy_pass http://model:4528;
+    proxy_pass http://model:${CYBER_DOJO_MODEL_PORT};
   }
 
   location /model/kata_event {
     rewrite ^/model/kata_event /kata_event break;
-    proxy_pass http://model:4528;
+    proxy_pass http://model:${CYBER_DOJO_MODEL_PORT};
   }
 
   location /model/kata_events {
     rewrite ^/model/kata_events /kata_events break;
-    proxy_pass http://model:4528;
+    proxy_pass http://model:${CYBER_DOJO_MODEL_PORT};
   }
 
   location /model/kata_option_get {
     rewrite ^/model/kata_option_get /kata_option_get break;
-    proxy_pass http://model:4528;
+    proxy_pass http://model:${CYBER_DOJO_MODEL_PORT};
   }
 
   location /model/kata_option_set {
     rewrite ^/model/kata_option_set /kata_option_set break;
-    proxy_pass http://model:4528;
+    proxy_pass http://model:${CYBER_DOJO_MODEL_PORT};
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -127,7 +129,7 @@ server {
 
   location /dashboard/ {
     rewrite ^/dashboard/(.*) /$1 break;
-    proxy_pass http://dashboard:4527;
+    proxy_pass http://dashboard:${CYBER_DOJO_DASHBOARD_PORT};
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -135,12 +137,12 @@ server {
 
   location /differ/diff_summary {
     rewrite ^/differ/diff_summary /diff_summary break;
-    proxy_pass http://differ:4567;
+    proxy_pass http://differ:${CYBER_DOJO_DIFFER_PORT};
   }
 
   location /differ/diff_lines {
     rewrite ^/differ/diff_lines /diff_lines break;
-    proxy_pass http://differ:4567;
+    proxy_pass http://differ:${CYBER_DOJO_DIFFER_PORT};
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -150,32 +152,32 @@ server {
 
   location /custom-start-points/sha {
     rewrite ^/custom-start-points/sha /sha break;
-    proxy_pass http://custom-start-points:4526;
+    proxy_pass http://custom-start-points:${CYBER_DOJO_CUSTOM_START_POINTS_PORT};
   }
   location /exercises-start-points/sha {
     rewrite ^/exercises-start-points/sha /sha break;
-    proxy_pass http://exercises-start-points:4525;
+    proxy_pass http://exercises-start-points:${CYBER_DOJO_EXERCISES_START_POINTS_PORT};
   }
   location /languages-start-points/sha {
     rewrite ^/languages-start-points/sha /sha break;
-    proxy_pass http://languages-start-points:4524;
+    proxy_pass http://languages-start-points:${CYBER_DOJO_LANGUAGES_START_POINTS_PORT};
   }
 
   location /differ/sha {
     rewrite ^/differ/sha /sha break;
-    proxy_pass http://differ:4567;
+    proxy_pass http://differ:${CYBER_DOJO_DIFFER_PORT};
   }
   location /model/sha {
     rewrite ^/model/sha /sha break;
-    proxy_pass http://model:4528;
+    proxy_pass http://model:${CYBER_DOJO_MODEL_PORT};
   }
   location /runner/sha {
     rewrite ^/runner/sha /sha break;
-    proxy_pass http://runner:4597;
+    proxy_pass http://runner:${CYBER_DOJO_RUNNER_PORT};
   }
   location /saver/sha {
     rewrite ^/saver/sha /sha break;
-    proxy_pass http://saver:4537;
+    proxy_pass http://saver:${CYBER_DOJO_SAVER_PORT};
   }
   location /shas {
     rewrite ^/shas/(.*) /$1 break;
@@ -203,7 +205,7 @@ server {
 
     # Try to serve static files from nginx.
     if (!-f $request_filename) {
-      proxy_pass http://web:3000;
+      proxy_pass http://web:${CYBER_DOJO_WEB_PORT};
       break;
     }
   }
