--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -92,6 +92,19 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Saver paths
+
+  location /saver/group_manifest {
+    rewrite ^/saver/group_manifest /group_manifest break;
+    proxy_pass http://saver:${CYBER_DOJO_SAVER_PORT};
+  }
+
+  location /saver/group_joined {
+    rewrite ^/saver/group_joined /group_joined break;
+    proxy_pass http://saver:${CYBER_DOJO_SAVER_PORT};
+  }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Model paths
 
   location /model/group_manifest {
